# workshop_ssw

./: .gitignore
day1/bash-web-app/: Dockerfile  README.md  docker-compose.yml  main.sh
day1/csharp-web-app/: .env  Dockerfile  Program.cs  README.md  csharp-web-app.csproj  docker-compose.yml  pipeline.sh
day1/dart-web-app/: .env  Dockerfile  README.md  README_NN.md  docker-compose.yml  main.dart  pipeline.sh  pubspec.yaml
day1/dart-web-app/.dart_tool/: package_config.json  package_graph.json
day1/go-web-app/: .env  Dockerfile  README.md  build.sh  docker-compose.yml  go.mod  main.go  pipeline.sh
day1/js-web-app/: .env  Dockerfile  README.md  docker-compose.yml  main.js  package.json  pipeline.sh
day1/php-web-app/: Dockerfile  README.md  composer.json  docker-compose.yml  index.php  pipeline.sh
day1/php-web-app/data/: php_events.json
day1/python-web-app/: .env  Dockerfile  README.md  main.py  pipeline.sh  requirements.txt
day1/python-web-app/mnt/user-data/outputs/python-web-app/: Dockerfile  docker-compose.yml
day1/rust-web-app/: .env  .gitignore  Cargo.toml  Dockerfile  Dockerv2.txt  README.md  pipeline.sh
day1/rust-web-app/src/: main.rs
day3/busybox-app/: Dockerfile  README.md  busybox-app-pod.yaml  busybox-pod.txt
day3/my-nginx/: README.md  nginx-deploy.txt  nginx-deploy.yaml
day3/my-nginx-stable/: README.md  nginx-st-deploy.yaml
day3/nginx-config-map/: README.md  index.html  nginx-cm.yaml  nginx-deploy copy.yaml  nginx-deploy.yaml  nginx-svc.yaml
rust-web-app/: docker-compose.yml
rust-web-app/src/: main.rs
