[package]
name        = "rust-web-app"
version     = "0.1.0"
edition     = "2021"
authors     = ["Student"]
description = "Event-Driven Web Application in Rust"

# =============================
# Dependencies (Dependency File)
# =============================
[dependencies]
actix-web  = "4"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10"
log        = "0.4"
dotenvy    = "0.15"
